# DRF-practice

./: .env.sample  .flake8  .gitignore  Dockerfile  README.md  data.json  docker-compose.yaml  init.sql  pyproject.toml
config/: celery.py  settings.py  urls.py
course/: admin.py  models.py  pagination.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
course/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_course_video_url.py  0004_alter_course_image_alter_course_name_and_more.py  0005_delete_subscribe.py
fixtures/: data.json
lesson/: models.py  serializers.py  urls.py  views.py
lesson/migrations/: 0001_initial.py  0002_alter_lesson_video_url.py  0003_lesson_course.py  0004_alter_lesson_course.py
users/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  validators.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_payment_paid_course_alter_payment_paid_lesson_and_more.py  0002_alter_user_options_remove_user_username_and_more.py  0002_subscribe.py  0003_alter_payment_paid_course_alter_payment_paid_lesson_and_more.py  0003_payment.py  0003_rename_subscribe_subscription.py  0004_alter_payment_paid_course_alter_payment_paid_lesson_and_more.py  0004_payment_stripe_pk.py  0005_remove_payment_stripe_pk_payment_stripe_id.py  0006_rename_stripe_id_payment_stripe_pk.py  0007_rename_stripe_pk_payment_stripe_payment_id.py  0008_payment_stripe_payment_url.py  0009_alter_payment_stripe_payment_url.py  0010_alter_payment_amount.py  0011_payment_status.py  0012_alter_user_last_login.py
